--- a/_config.yml
+++ b/_config.yml
@@ -107,8 +107,7 @@ x_username: # your X handle
 youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
-contact_note: >
-Socials
+contact_note: Socials
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
