--- a/_config.yml
+++ b/_config.yml
@@ -163,13 +163,13 @@ disqus_shortname: al-folio # put your disqus shortname
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
 
-#external_sources: 
-#  - name: 
+#external_sources:
+#  - name:
 #    rss_url:
 #  - name:
-#    posts: 
-#      - url: 
-#        published_date: 
+#    posts:
+#      - url:
+#        published_date:
 
 # -----------------------------------------------------------------------------
 # Newsletter
@@ -301,14 +301,14 @@ jekyll-archives:
     category: "/blog/category/:name/"
 
 display_tags: ["notes", "thoughts", "misc"] # these tags will be displayed on the front page of your blog
-display_categories: ["external-services"] # these categories will be displayed on the front page of your blog
+display_categories: #["external-services"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: 
+  last_name:
   first_name:
 
   style: apa
